#ifndef ADMINMENU_H
#define ADMINMENU_H

class AdminMenu
{
};

#endif