#ifndef LOGINSCREEN_H
#define LOGINSCREEN_H

class LoginScreen
{
};

#endif