#ifndef MAINMENU_H
#define MAINMENU_H

class MainMenu{

};

#endif