#ifndef RESULTMENU
#define RESULTMENU

class ResultMenu
{
};

#endif