#ifndef STUDENTMENU
#define STUDENTMENU

class StudentMenu
{
};

#endif